Fix statistic overlaping on mobile

--- a/ckanext/vag/public/base/css/main.css
+++ b/ckanext/vag/public/base/css/main.css
@@ -106,3 +106,8 @@ body {
 .site-footer a {
   color : white;
 }
+@media (max-width: 768px) {
+    .homepage .stats ul li{
+        float: none;
+    }
+}
